@@ -78,6 +78,9 @@ h4. Changes in @org.eclipse.sirius.tests.swtbot.support@
 * <span class="label label-success">Added</span> The condition @org.eclipse.sirius.tests.swtbot.support.api.condition.CheckNbVisibleElementsInGallery@ has been added to avoid tests failing because of images that have not finished loading.
 * <span class="label label-danger">Removed</span> The method @org.eclipse.sirius.tests.swtbot.support.api.AbstractSiriusSwtBotGefTestCase.getNbStatusInErrorLog()@ has been removed. It is not reliable (sometimes the number of elements returned is 0 instead of the real number). It should be replaced by @doesAnErrorOccurs()@ and @doesAWarningOccurs()@.
 
+h4. Changes in @org.eclipse.sirius.tests.junit.support@
+
+* <span class="label label-success">Added</span> The method  @org.eclipse.sirius.tests.support.api.SiriusTestCase.copyAllFiles(String, String, String)@ and  @org.eclipse.sirius.tests.support.api.EclipseTestsSupportHelper.copyDirectory(String, String)@ have been added to ease to the copy of the test files from the test plugin to the junit workspace.
 
 h2(#sirius6.6.0). Changes in Sirius 6.6.0
 
